--- a/editusers.ui
+++ b/editusers.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1123</width>
-    <height>744</height>
+    <width>1151</width>
+    <height>829</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,7 +47,20 @@ QWidget {background-color: white}
    </item>
    <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="4" column="3" rowspan="3">
+     <item row="2" column="0" colspan="5">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="4" column="2" rowspan="2">
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -60,29 +73,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="4" column="2" rowspan="3">
-      <widget class="QListView" name="itemView">
-       <property name="minimumSize">
-        <size>
-         <width>350</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="editTriggers">
-        <set>QAbstractItemView::NoEditTriggers</set>
-       </property>
-       <property name="alternatingRowColors">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0" rowspan="3" colspan="2">
+     <item row="4" column="0" rowspan="2" colspan="2">
       <widget class="QListView" name="userView">
        <property name="minimumSize">
         <size>
@@ -98,17 +89,7 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
-     <item row="3" column="2" alignment="Qt::AlignHCenter">
-      <widget class="QLabel" name="label_7">
-       <property name="styleSheet">
-        <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
-       </property>
-       <property name="text">
-        <string>Items Checked Out</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="6" alignment="Qt::AlignHCenter">
+     <item row="1" column="0" colspan="5" alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="label">
        <property name="styleSheet">
         <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
@@ -117,19 +98,6 @@ QWidget {background-color: white}
         <string>Edit Users</string>
        </property>
       </widget>
-     </item>
-     <item row="2" column="0" colspan="6">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
      <item row="3" column="0" colspan="2" alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="label_6">
@@ -141,7 +109,7 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
-     <item row="3" column="5" alignment="Qt::AlignRight">
+     <item row="3" column="4" alignment="Qt::AlignRight">
       <widget class="QPushButton" name="deleteButton">
        <property name="maximumSize">
         <size>
@@ -151,19 +119,27 @@ QWidget {background-color: white}
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(170, 0, 0);
-font: 10pt &quot;Noto Sans&quot;;</string>
+font: 10pt &quot;Noto Sans&quot;;
+color: rgb(255, 255, 255);</string>
        </property>
        <property name="text">
-        <string>Delete User</string>
+        <string>Remove User</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="4" colspan="2">
+     <item row="4" column="3" colspan="2">
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="9" column="0" colspan="2">
-        <widget class="QPushButton" name="saveButton">
+       <item row="7" column="0">
+        <widget class="QCheckBox" name="adminCheckBox">
          <property name="text">
-          <string>Save Details</string>
+          <string>Administrator</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0" colspan="2">
+        <widget class="QCheckBox" name="inventoryCheckBox">
+         <property name="text">
+          <string>Inventory Access</string>
          </property>
         </widget>
        </item>
@@ -188,31 +164,14 @@ font: 10pt &quot;Noto Sans&quot;;</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="0">
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
        <item row="3" column="1">
         <widget class="QLineEdit" name="email"/>
        </item>
        <item row="4" column="1">
         <widget class="QLineEdit" name="phoneCall"/>
        </item>
-       <item row="7" column="0" colspan="2">
-        <widget class="QCheckBox" name="adminCheckBox">
-         <property name="text">
-          <string>Administrator</string>
-         </property>
-        </widget>
+       <item row="5" column="1">
+        <widget class="QLineEdit" name="phoneWhatsApp"/>
        </item>
        <item row="2" column="1">
         <widget class="QLineEdit" name="name">
@@ -228,8 +187,8 @@ font: 10pt &quot;Noto Sans&quot;;</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
-        <widget class="QLineEdit" name="phoneWhatsApp"/>
+       <item row="6" column="1">
+        <widget class="QLineEdit" name="roomNumber"/>
        </item>
        <item row="6" column="0">
         <widget class="QLabel" name="label_11">
@@ -237,9 +196,6 @@ font: 10pt &quot;Noto Sans&quot;;</string>
           <string>Room Number</string>
          </property>
         </widget>
-       </item>
-       <item row="6" column="1">
-        <widget class="QLineEdit" name="roomNumber"/>
        </item>
        <item row="0" column="0" colspan="2" alignment="Qt::AlignHCenter">
         <widget class="QLabel" name="username">
@@ -270,11 +226,25 @@ font: 10pt &quot;Noto Sans&quot;;</string>
          </property>
         </widget>
        </item>
+       <item row="7" column="1">
+        <widget class="QCheckBox" name="labCheckBox">
+         <property name="text">
+          <string>ARC Lab Access</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="0" colspan="2">
+        <widget class="QPushButton" name="biometricButton">
+         <property name="text">
+          <string>Biometrics</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
     </layout>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <spacer name="verticalSpacer_4">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -286,6 +256,13 @@ font: 10pt &quot;Noto Sans&quot;;</string>
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="1" column="1" alignment="Qt::AlignHCenter">
+    <widget class="QPushButton" name="saveButton">
+     <property name="text">
+      <string>Save Details</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
