--- a/finger.ui
+++ b/finger.ui
@@ -56,6 +56,19 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
+     <item>
+      <spacer name="verticalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
      <item alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="fingerLabel">
        <property name="maximumSize">
